downloads page - fix country icon on mobiles

--- a/app/assets/stylesheets/admin/downloads.scss
+++ b/app/assets/stylesheets/admin/downloads.scss
@@ -1,6 +1,6 @@
 .downloads {
   td img {
-    min-width: pxtovw(24);
+    min-width: pxtovw(30);
   }
   .table td {
     vertical-align: middle;
